[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/disco/minigames/cocktail_bar/CocktailBar.gd" type="Script" id=1]
[ext_resource path="res://game/disco/minigames/cocktail_bar/CocktailShaker.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 226, 49.5 )

[node name="CocktailBar" type="Node2D"]
script = ExtResource( 1 )

[node name="IngredientSpawner" type="CollisionShape2D" parent="."]
position = Vector2( 226, -50 )
shape = SubResource( 1 )

[node name="IngredientSpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CocktailShaker" parent="." instance=ExtResource( 2 )]
z_index = 2

[node name="RecipeSlot1" type="Node2D" parent="." groups=["recipe_slots"]]
position = Vector2( 631.464, 343.856 )
z_index = 1

[node name="RecipeSlot2" type="Node2D" parent="." groups=["recipe_slots"]]
position = Vector2( 782.253, 339 )
z_index = 1

[node name="RecipeSlot3" type="Node2D" parent="." groups=["recipe_slots"]]
position = Vector2( 930.695, 340.053 )
z_index = 1

[node name="RecipeTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -6.50079, -20.431 )
color = Color( 0.447059, 0.286275, 0.235294, 1 )
polygon = PoolVector2Array( -72.4363, 354.088, 1164.57, 342.944, 1138.57, 727.419, -60.3634, 679.127 )

[connection signal="timeout" from="IngredientSpawnTimer" to="." method="_on_IngredientSpawnTimer_timeout"]
[connection signal="timeout" from="RecipeTimer" to="." method="_on_RecipeTimer_timeout"]
